[gd_scene load_steps=7 format=2]

[ext_resource path="res://graphics/episode_selections/Auswahl.png" type="Texture" id=1]
[ext_resource path="res://graphics/episode_selections/Auswahl Theorie.jpg" type="Texture" id=2]
[ext_resource path="res://graphics/episode_selections/Auswahl Labor.jpg" type="Texture" id=3]
[ext_resource path="res://graphics/episode_selections/Auswahl Werkstatt.jpg" type="Texture" id=4]
[ext_resource path="res://src/EpisodeSelector.gd" type="Script" id=5]
[ext_resource path="res://graphics/lab/backArrow.png" type="Texture" id=6]

[node name="EpisodeSelector" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 0.48, 0.48 )
texture = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -960.0
margin_top = -640.0
margin_right = -960.0
margin_bottom = -640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background/CenterContainer"]
margin_left = 475.0
margin_top = 370.0
margin_right = 1445.0
margin_bottom = 910.0
custom_constants/separation = 40

[node name="HBoxContainer" type="HBoxContainer" parent="Background/CenterContainer/VBoxContainer"]
margin_right = 970.0
margin_bottom = 250.0
custom_constants/separation = 90

[node name="EpisodesTheory" type="TextureButton" parent="Background/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 440.0
margin_bottom = 250.0
rect_min_size = Vector2( 440, 250 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EpisodesLab" type="TextureButton" parent="Background/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 530.0
margin_right = 970.0
margin_bottom = 250.0
rect_min_size = Vector2( 440, 250 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EpisodesWorkshop" type="TextureButton" parent="Background/CenterContainer/VBoxContainer"]
margin_top = 290.0
margin_right = 970.0
margin_bottom = 540.0
rect_min_size = Vector2( 440, 250 )
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 160.0
margin_top = 600.0
margin_right = 260.0
margin_bottom = 680.0
rect_rotation = 180.0
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Background/CenterContainer/VBoxContainer/HBoxContainer/EpisodesTheory" to="." method="_on_EpisodesTheory_pressed"]
[connection signal="pressed" from="Background/CenterContainer/VBoxContainer/HBoxContainer/EpisodesLab" to="." method="_on_EpisodesLab_pressed"]
[connection signal="pressed" from="Background/CenterContainer/VBoxContainer/EpisodesWorkshop" to="." method="_on_EpisodesWorkshop_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
